Fix TransTable overflow scrolling

--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -8,16 +8,19 @@
   src: local("Gilroy-Regular"), url(../assets/Gilroy.ttf) format("truetype");
 }
 
-.ant-table-body::-webkit-scrollbar {
-  width: 8px;
+.trans-table {
+  margin-left: calc(2vh + 6px);
 }
 
-.ant-table-body::-webkit-scrollbar-thumb {
+.trans-table::-webkit-scrollbar {
+  width: 6px;
+}
+
+.trans-table::-webkit-scrollbar-thumb {
   background-color: darkgrey;
-  border-radius: 5px;
+  border-radius: 4px;
 }
 
-.ant-table-body::-webkit-scrollbar-track {
-  background-color: lightgrey;
-  border-radius: 5px;
+.trans-table::-webkit-scrollbar-track {
+  display: none;
 }
